# backend/models/question.go
@@ -4,5 +4,5 @@ type Question struct {
 	BaseModel
 	Text         string
 	Answers      []Answer `json:",omitempty"`
-	HasBeenShown bool     `json:"-"`
+	HasBeenShown bool     `readonly:"true"`
 }
